option('analyzer', type: 'boolean', value: false,
       description: 'Enable gcc\'s Static Analyzer')
# sanitizer: Use -Db_sanitize=<none|address|thread|undefined|memory|address,undefined>
# gcov: TODO

# TODO
option('busybox', type: 'boolean', value: false,
       description: 'busybox workaround')
option('contrib', type: 'boolean', value: true,
       description: 'Install contrib files')
option('manpage', type: 'boolean', value: true,
       description: 'Manpages')
option('suid', type: 'boolean', value: true,
       description: 'Install firejail as SUID executable')


# TODO
option('apparmor', type: 'boolean', value: false,
       description: 'AppArmor support')
# TODO
option('selinux', type: 'boolean', value: false,
       description: 'SELinux labeling support')


option('chroot', type: 'boolean', value: true,
       description: 'chroot')
option('dbusproxy', type: 'boolean', value: true,
       description: 'D-Bus proxy support')
option('file-transfer', type: 'boolean', value: true,
       description: 'file transfer')
option('firetunnel', type: 'boolean', value: true,
       description: 'firetunnel')
option('force-nonewprivs', type: 'boolean', value: true,
       description: 'force nonewprivs')
option('globalcfg', type: 'boolean', value: true,
       description: 'Abort execution if the global config is not present')
option('network', type: 'boolean', value: true,
       description: 'network')
option('output', type: 'boolean', value: true,
       description: '--output logging')
option('private-home', type: 'boolean', value: true,
       description: 'private home feature')
option('userns', type: 'boolean', value: true,
       description: 'user namespace')
option('usertmpfs', type: 'boolean', value: true,
       description: 'tmpfs as regular user')
option('x11', type: 'boolean', value: true,
       description: 'X11 sandboxing support')

# TODO
option('lts', type: 'boolean', value: false,
       description: 'LTS')
