firejail_sources = [
  'main.c',
  'appimage.c',
  'appimage_size.c',
  'arp.c',
  'bandwidth.c',
  'caps.c',
  'cgroup.c',
  'checkcfg.c',
  'cmdline.c',
  'cpu.c',
  'dhcp.c',
  'env.c',
  'fs.c',
  'fs_bin.c',
  'fs_dev.c',
  'fs_etc.c',
  'fs_home.c',
  'fs_hostname.c',
  'fs_lib.c',
  'fs_lib2.c',
  'fs_logger.c',
  'fs_mkdir.c',
  'fs_trace.c',
  'fs_var.c',
  'fs_whitelist.c',
  'ids.c',
  'join.c',
  'ls.c',
  'macros.c',
  'mountinfo.c',
  'netfilter.c',
  'netns.c',
  'network.c',
  'network_main.c',
  'no_sandbox.c',
  'paths.c',
  'preproc.c',
  'profile.c',
  'protocol.c',
  'pulseaudio.c',
  'restricted_shell.c',
  'restrict_users.c',
  'rlimit.c',
  'run_files.c',
  'run_symlink.c',
  'sandbox.c',
  'sbox.c',  
  'seccomp.c', 
  'selinux.c',
  'shutdown.c',
  'usage.c',
  'util.c',
  'x11.c',

  '../lib/common.c',
  '../lib/errno.c',
  '../lib/firejail_user.c',
  '../lib/ldd_utils.c',
  '../lib/syscall.c',    
]

if get_option('suid')
  firejail_perms = 'rwsr-xr-x'
else
  firejail_perms = 'rwxr-xr-x'
endif

executable('firejail', firejail_sources,
  install: true,
  install_mode: [firejail_perms, 0, 0],

  c_args: [
    c_args_constants    
  ],
)
